force-app/main/default/objects/VIPeriode__c/VIPeriode__c.object-meta.xml
<CustomObject>
    <label>Période comptable</label>
    <nameField>
        <label>Nom de Période</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Périodes comptables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>