force-app/main/default/objects/VIPeriode__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pays</label>
    <referenceTo>VIPays__c</referenceTo>
    <relationshipLabel>Périodes comptables</relationshipLabel>
    <relationshipName>Periodes_comptables</relationshipName>
    <type>Lookup</type>
</CustomField>