force-app/main/default/objects/VIPeriode__c/fields/Periode_comptable_precedente__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable_precedente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Période comptable précédente</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipLabel>Périodes comptables</relationshipLabel>
    <relationshipName>Periodes_comptables</relationshipName>
    <type>Lookup</type>
</CustomField>