force-app/main/default/objects/VIPeriode__c/fields/Saisie_ouverte__c.field-meta.xml
<CustomField>
    <fullName>Saisie_ouverte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saisie écarts CAF ouverte</label>
    <type>Checkbox</type>
</CustomField>