force-app/main/default/objects/VIPeriode__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periode_comptable_statut</valueSetName>
    </valueSet>
</CustomField>