force-app/main/default/objects/VIPeriode__c/listViews/UK.listView-meta.xml
<ListView>
    <fullName>UK</fullName>
    <columns>NAME</columns>
    <columns>Periode_comptable_precedente__c</columns>
    <columns>Pays__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <columns>Saisie_ouverte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pays__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>UK</label>
</ListView>