force-app/main/default/objects/VIPeriode__c/listViews/X2021_FR.listView-meta.xml
<ListView>
    <fullName>X2021_FR</fullName>
    <columns>NAME</columns>
    <columns>Periode_comptable_precedente__c</columns>
    <columns>Pays__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Statut__c</columns>
    <columns>Saisie_ouverte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>2021</value>
    </filters>
    <label>2021</label>
</ListView>